content/_generated-doc/3.20/config/quarkus-hibernate-search-orm-elasticsearch.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-enabled]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-enabled[`quarkus.hibernate-search-orm.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether Hibernate Search is enabled **during the build**.

If Hibernate Search is disabled during the build, all processing related to Hibernate Search will be skipped,
but it will not be possible to activate Hibernate Search at runtime:
`quarkus.hibernate-search-orm.active` will default to `false` and setting it to `true` will lead to an error.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-background-failure-handler]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-background-failure-handler[`quarkus.hibernate-search-orm.background-failure-handler`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.background-failure-handler+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm."persistence-unit-name".background-failure-handler`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".background-failure-handler+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
A xref:hibernate-search-orm-elasticsearch.adoc#bean-reference-note-anchor[bean reference] to a component
that should be notified of any failure occurring in a background process
(mainly index operations).

The referenced bean must implement `FailureHandler`.

See
link:{hibernate-search-docs-url}#configuration-background-failure-handling[this section of the reference documentation]
for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `FailureHandler` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
See xref:hibernate-search-orm-elasticsearch.adoc#plugging-in-custom-components[this section]
for more information.

If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_BACKGROUND_FAILURE_HANDLER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_BACKGROUND_FAILURE_HANDLER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-coordination-strategy]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-coordination-strategy[`quarkus.hibernate-search-orm.coordination.strategy`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.coordination.strategy+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm."persistence-unit-name".coordination.strategy`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".coordination.strategy+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The strategy to use for coordinating between threads or even separate instances of the application,
in particular in automatic indexing.

See xref:hibernate-search-orm-elasticsearch.adoc#coordination[coordination] for more information.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_COORDINATION_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_COORDINATION_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`none`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-mapping-configurer]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-mapping-configurer[`quarkus.hibernate-search-orm.mapping.configurer`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.mapping.configurer+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm."persistence-unit-name".mapping.configurer`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".mapping.configurer+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
One or more xref:hibernate-search-orm-elasticsearch.adoc#bean-reference-note-anchor[bean references]
to the component(s) used to configure the Hibernate Search mapping,
in particular programmatically.

The referenced beans must implement `HibernateOrmSearchMappingConfigurer`.

See xref:hibernate-search-orm-elasticsearch.adoc#programmatic-mapping[Programmatic mapping] for an example
on how mapping configurers can be used to apply programmatic mappings.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `HibernateOrmSearchMappingConfigurer` implementations with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
See xref:hibernate-search-orm-elasticsearch.adoc#plugging-in-custom-components[this section]
for more information.

If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_MAPPING_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_MAPPING_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-active]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-active[`quarkus.hibernate-search-orm.active`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.active+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm."persistence-unit-name".active`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".active+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether Hibernate Search should be active for this persistence unit at runtime.

If Hibernate Search is not active, it won't index Hibernate ORM entities,
and accessing the SearchMapping/SearchSession of the relevant persistence unit
for search or other operation will not be possible.

Note that if Hibernate Search is disabled (i.e. `quarkus.hibernate-search-orm.enabled` is set to `false`),
it won't be active for any persistence unit, and setting this property to `true` will fail.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ACTIVE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`'true' if Hibernate Search is enabled; 'false' otherwise`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-schema-management-strategy]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-schema-management-strategy[`quarkus.hibernate-search-orm.schema-management.strategy`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.schema-management.strategy+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm."persistence-unit-name".schema-management.strategy`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".schema-management.strategy+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The schema management strategy, controlling how indexes and their schema
are created, updated, validated or dropped on startup and shutdown.

Available values:

[cols=2]
!===
h!Strategy
h!Definition

!none
!Do nothing: assume that indexes already exist and that their schema matches Hibernate Search's expectations.

!validate
!Validate that indexes exist and that their schema matches Hibernate Search's expectations.

If it does not, throw an exception, but make no attempt to fix the problem.

!create
!For indexes that do not exist, create them along with their schema.

For indexes that already exist, do nothing: assume that their schema matches Hibernate Search's expectations.

!create-or-validate (**default** unless using Dev Services)
!For indexes that do not exist, create them along with their schema.

For indexes that already exist, validate that their schema matches Hibernate Search's expectations.

If it does not, throw an exception, but make no attempt to fix the problem.

!create-or-update
!For indexes that do not exist, create them along with their schema.

For indexes that already exist, validate that their schema matches Hibernate Search's expectations;
if it does not match expectations, try to update it.

**This strategy is unfit for production environments**,
due to several important limitations,
but can be useful when developing.

!drop-and-create
!For indexes that do not exist, create them along with their schema.

For indexes that already exist, drop them, then create them along with their schema.

!drop-and-create-and-drop (**default** when using Dev Services)
!For indexes that do not exist, create them along with their schema.

For indexes that already exist, drop them, then create them along with their schema.

Also, drop indexes and their schema on shutdown.
!===

See link:{hibernate-search-docs-url}#mapper-orm-schema-management-strategy[this section of the reference documentation]
for more information.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_SCHEMA_MANAGEMENT_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_SCHEMA_MANAGEMENT_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--
a|`none`, `validate`, `create`, `create-or-validate`, `create-or-update`, `drop-and-create`, `drop-and-create-and-drop`
|`drop-and-create-and-drop when using Dev Services; create-or-validate otherwise`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-query-loading-cache-lookup-strategy]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-query-loading-cache-lookup-strategy[`quarkus.hibernate-search-orm.query.loading.cache-lookup.strategy`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.query.loading.cache-lookup.strategy+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm."persistence-unit-name".query.loading.cache-lookup.strategy`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".query.loading.cache-lookup.strategy+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The strategy to use when loading entities during the execution of a search query.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_QUERY_LOADING_CACHE_LOOKUP_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_QUERY_LOADING_CACHE_LOOKUP_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--
a|`skip`, `persistence-context`, `persistence-context-then-second-level-cache`
|`skip`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-query-loading-fetch-size]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-query-loading-fetch-size[`quarkus.hibernate-search-orm.query.loading.fetch-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.query.loading.fetch-size+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm."persistence-unit-name".query.loading.fetch-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".query.loading.fetch-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The fetch size to use when loading entities during the execution of a search query.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_QUERY_LOADING_FETCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_QUERY_LOADING_FETCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`100`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-indexing-plan-synchronization-strategy]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-indexing-plan-synchronization-strategy[`quarkus.hibernate-search-orm.indexing.plan.synchronization.strategy`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.indexing.plan.synchronization.strategy+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm."persistence-unit-name".indexing.plan.synchronization.strategy`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".indexing.plan.synchronization.strategy+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
How to synchronize between application threads and indexing,
in particular when relying on (implicit) listener-triggered indexing on entity change,
but also when using a `SearchIndexingPlan` explicitly.

Defines how complete indexing should be before resuming the application thread
after a database transaction is committed.

[WARNING]
====
Indexing synchronization is only relevant when coordination is disabled (which is the default).

With the xref:hibernate-search-orm-elasticsearch.adoc#coordination[`outbox-polling` coordination strategy],
indexing happens in background threads and is always asynchronous;
the behavior is equivalent to the `write-sync` synchronization strategy.
====

Available values:

[cols=5]
!===
.2+h!Strategy
.2+h!Throughput
3+^h!Guarantees when the application thread resumes

h!Changes applied
h!Changes safe from crash/power loss
h!Changes visible on search

!async
!Best
^!icon:times[role=red]
^!icon:times[role=red]
^!icon:times[role=red]

!write-sync (**default**)
!Medium
^!icon:check[role=lime]
^!icon:check[role=lime]
^!icon:times[role=red]

!read-sync
!Medium to worst
^!icon:check[role=lime]
^!icon:times[role=red]
^!icon:check[role=lime]

!sync
!Worst
^!icon:check[role=lime]
^!icon:check[role=lime]
^!icon:check[role=lime]
!===

This property also accepts a xref:hibernate-search-orm-elasticsearch.adoc#bean-reference-note-anchor[bean reference]
to a custom implementations of `IndexingPlanSynchronizationStrategy`.

See
link:{hibernate-search-docs-url}#indexing-plan-synchronization[this section of the reference documentation]
for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `IndexingPlanSynchronizationStrategy` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
See xref:hibernate-search-orm-elasticsearch.adoc#plugging-in-custom-components[this section]
for more information.

If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_INDEXING_PLAN_SYNCHRONIZATION_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_INDEXING_PLAN_SYNCHRONIZATION_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`write-sync`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-multi-tenancy-tenant-ids]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-multi-tenancy-tenant-ids[`quarkus.hibernate-search-orm.multi-tenancy.tenant-ids`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.multi-tenancy.tenant-ids+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm."persistence-unit-name".multi-tenancy.tenant-ids`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".multi-tenancy.tenant-ids+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
An exhaustive list of all tenant identifiers that may be used by the application when multi-tenancy is enabled.

Mainly useful when using the {@code outbox-polling} coordination strategy,
since it involves setting up one background processor per tenant.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_MULTI_TENANCY_TENANT_IDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_MULTI_TENANCY_TENANT_IDS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

h|[[quarkus-hibernate-search-orm-elasticsearch_section_quarkus-hibernate-search-orm-elasticsearch]] [.section-name.section-level0]##link:#quarkus-hibernate-search-orm-elasticsearch_section_quarkus-hibernate-search-orm-elasticsearch[Configuration for Elasticsearch/OpenSearch backends]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-version]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-version[`quarkus.hibernate-search-orm.elasticsearch.version`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.version+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".version`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".version+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.version`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.version+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".version`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".version+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The version of Elasticsearch used in the cluster.

As the schema is generated without a connection to the server, this item is mandatory.

It doesn't have to be the exact version (it can be `7` or `7.1` for instance) but it has to be sufficiently precise
to choose a model dialect (the one used to generate the schema) compatible with the protocol dialect (the one used
to communicate with Elasticsearch).

There's no rule of thumb here as it depends on the schema incompatibilities introduced by Elasticsearch versions. In
any case, if there is a problem, you will have an error when Hibernate Search tries to connect to the cluster.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION+++`
endif::add-copy-button-to-env-var[]
--
|ElasticsearchVersion
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-schema-management-settings-file]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-schema-management-settings-file[`quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.settings-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.settings-file+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.settings-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.settings-file+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.settings-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.settings-file+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Path to a file in the classpath holding custom index settings to be included in the index definition
when creating an Elasticsearch index.

The provided settings will be merged with those generated by Hibernate Search, including analyzer definitions.
When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;
it should not be relied upon.

See link:{hibernate-search-docs-url}#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]
for more information.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_SETTINGS_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_SETTINGS_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-schema-management-mapping-file]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-schema-management-mapping-file[`quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.schema-management.mapping-file+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.mapping-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.mapping-file+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.mapping-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.mapping-file+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.mapping-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.mapping-file+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Path to a file in the classpath holding a custom index mapping to be included in the index definition
when creating an Elasticsearch index.

The file does not need to (and generally shouldn't) contain the full mapping:
Hibernate Search will automatically inject missing properties (index fields) in the given mapping.

See link:{hibernate-search-docs-url}#backend-elasticsearch-mapping-custom[this section of the reference documentation]
for more information.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_MAPPING_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_MAPPING_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-analysis-configurer]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-analysis-configurer[`quarkus.hibernate-search-orm.elasticsearch.analysis.configurer`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.analysis.configurer+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".analysis.configurer`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".analysis.configurer+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.analysis.configurer`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.analysis.configurer+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".analysis.configurer`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".analysis.configurer+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
One or more xref:#bean-reference-note-anchor[bean references]
to the component(s) used to configure full text analysis (e.g. analyzers, normalizers).

The referenced beans must implement `ElasticsearchAnalysisConfigurer`.

See xref:#analysis-configurer[Setting up the analyzers] for more
information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `ElasticsearchAnalysisConfigurer` implementations with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
See xref:#plugging-in-custom-components[this section]
for more information.

If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_ANALYSIS_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_ANALYSIS_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-hosts]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-hosts[`quarkus.hibernate-search-orm.elasticsearch.hosts`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.hosts+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".hosts`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".hosts+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.hosts`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.hosts+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".hosts`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".hosts+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The list of hosts of the Elasticsearch servers.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_HOSTS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`localhost:9200`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-protocol]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-protocol[`quarkus.hibernate-search-orm.elasticsearch.protocol`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.protocol+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".protocol`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".protocol+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.protocol`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.protocol+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".protocol`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".protocol+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The protocol to use when contacting Elasticsearch servers. Set to "https" to enable SSL/TLS.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--
a|tooltip:http[Use clear-text HTTP, with SSL/TLS disabled.], tooltip:https[Use HTTPS, with SSL/TLS enabled.]
|tooltip:http[Use clear-text HTTP, with SSL/TLS disabled.]

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-username]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-username[`quarkus.hibernate-search-orm.elasticsearch.username`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.username+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".username`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".username+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.username`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.username+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".username`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".username+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The username used for authentication.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_USERNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-password]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-password[`quarkus.hibernate-search-orm.elasticsearch.password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.password+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".password`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".password+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.password`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.password+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".password`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".password+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The password used for authentication.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-connection-timeout]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-connection-timeout[`quarkus.hibernate-search-orm.elasticsearch.connection-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.connection-timeout+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".connection-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".connection-timeout+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.connection-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.connection-timeout+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".connection-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".connection-timeout+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The timeout when establishing a connection to an Elasticsearch server.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm[icon:question-circle[title=More information about the Duration format]]
|`1S`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-read-timeout]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-read-timeout[`quarkus.hibernate-search-orm.elasticsearch.read-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.read-timeout+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".read-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".read-timeout+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.read-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.read-timeout+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".read-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".read-timeout+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The timeout when reading responses from an Elasticsearch server.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm[icon:question-circle[title=More information about the Duration format]]
|`30S`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-request-timeout]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-request-timeout[`quarkus.hibernate-search-orm.elasticsearch.request-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.request-timeout+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".request-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".request-timeout+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.request-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.request-timeout+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".request-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".request-timeout+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The timeout when executing a request to an Elasticsearch server.

This includes the time needed to wait for a connection to be available,
send the request and read the response.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_REQUEST_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_REQUEST_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-max-connections]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-max-connections[`quarkus.hibernate-search-orm.elasticsearch.max-connections`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.max-connections+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".max-connections`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".max-connections+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.max-connections`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.max-connections+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".max-connections`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".max-connections+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The maximum number of connections to all the Elasticsearch servers.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`20`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-max-connections-per-route]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-max-connections-per-route[`quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.max-connections-per-route+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".max-connections-per-route`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".max-connections-per-route+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.max-connections-per-route`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.max-connections-per-route+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".max-connections-per-route`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".max-connections-per-route+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The maximum number of connections per Elasticsearch server.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS_PER_ROUTE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_MAX_CONNECTIONS_PER_ROUTE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`10`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-discovery-enabled]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-discovery-enabled[`quarkus.hibernate-search-orm.elasticsearch.discovery.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.discovery.enabled+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".discovery.enabled`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".discovery.enabled+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.discovery.enabled`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.discovery.enabled+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".discovery.enabled`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".discovery.enabled+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Defines if automatic discovery is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-discovery-refresh-interval]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-discovery-refresh-interval[`quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.discovery.refresh-interval+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".discovery.refresh-interval`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".discovery.refresh-interval+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.discovery.refresh-interval`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.discovery.refresh-interval+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".discovery.refresh-interval`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".discovery.refresh-interval+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Refresh interval of the node list.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm[icon:question-circle[title=More information about the Duration format]]
|`10S`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-thread-pool-size]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-thread-pool-size[`quarkus.hibernate-search-orm.elasticsearch.thread-pool.size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.thread-pool.size+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".thread-pool.size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".thread-pool.size+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.thread-pool.size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.thread-pool.size+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".thread-pool.size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".thread-pool.size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The size of the thread pool assigned to the backend.

Note that number is **per backend**, not per index.
Adding more indexes will not add more threads.

As all operations happening in this thread-pool are non-blocking,
raising its size above the number of processor cores available to the JVM will not bring noticeable performance
benefit.
The only reason to alter this setting would be to reduce the number of threads;
for example, in an application with a single index with a single indexing queue,
running on a machine with 64 processor cores,
you might want to bring down the number of threads.

Defaults to the number of processor cores available to the JVM on startup.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_THREAD_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_THREAD_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-query-shard-failure-ignore]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-query-shard-failure-ignore[`quarkus.hibernate-search-orm.elasticsearch.query.shard-failure.ignore`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.query.shard-failure.ignore+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".query.shard-failure.ignore`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".query.shard-failure.ignore+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.query.shard-failure.ignore`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.query.shard-failure.ignore+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".query.shard-failure.ignore`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".query.shard-failure.ignore+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether partial shard failures are ignored (`true`) or lead to Hibernate Search throwing an exception (`false`).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_QUERY_SHARD_FAILURE_IGNORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_QUERY_SHARD_FAILURE_IGNORE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-version-check-enabled]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-version-check-enabled[`quarkus.hibernate-search-orm.elasticsearch.version-check.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.version-check.enabled+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".version-check.enabled`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".version-check.enabled+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.version-check.enabled`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.version-check.enabled+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".version-check.enabled`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".version-check.enabled+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether Hibernate Search should check the version of the Elasticsearch cluster on startup.

Set to `false` if the Elasticsearch cluster may not be available on startup.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION_CHECK_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_VERSION_CHECK_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-schema-management-required-status]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-schema-management-required-status[`quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.required-status`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.required-status+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.required-status`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.required-status+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.required-status`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.required-status+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
--
a|`green`, `yellow`, `red`
|`yellow`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-schema-management-required-status-wait-timeout]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-schema-management-required-status-wait-timeout[`quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.schema-management.required-status-wait-timeout+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.required-status-wait-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".schema-management.required-status-wait-timeout+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.required-status-wait-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.schema-management.required-status-wait-timeout+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.required-status-wait-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".schema-management.required-status-wait-timeout+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
How long we should wait for the status before failing the bootstrap.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm[icon:question-circle[title=More information about the Duration format]]
|`10S`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexing-queue-count]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexing-queue-count[`quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexing.queue-count+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexing.queue-count`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexing.queue-count+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.queue-count`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.queue-count+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexing.queue-count`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexing.queue-count+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`10`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexing-queue-size]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexing-queue-size[`quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexing.queue-size+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexing.queue-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexing.queue-size+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.queue-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.queue-size+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexing.queue-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexing.queue-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`1000`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexing-max-bulk-size]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexing-max-bulk-size[`quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexing.max-bulk-size+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexing.max-bulk-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexing.max-bulk-size+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.max-bulk-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexing.max-bulk-size+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexing.max-bulk-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexing.max-bulk-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`100`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-layout-strategy]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-layout-strategy[`quarkus.hibernate-search-orm.elasticsearch.layout.strategy`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.layout.strategy+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".layout.strategy`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".layout.strategy+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.layout.strategy`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.layout.strategy+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".layout.strategy`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".layout.strategy+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
A xref:#bean-reference-note-anchor[bean reference] to the component
used to configure the Elasticsearch layout: index names, index aliases, ...

The referenced bean must implement `IndexLayoutStrategy`.

Available built-in implementations:

`simple`::
The default, future-proof strategy: if the index name in Hibernate Search is `myIndex`,
this strategy will create an index named `myindex-000001`, an alias for write operations named `myindex-write`,
and an alias for read operations named `myindex-read`.
`no-alias`::
A strategy without index aliases, mostly useful on legacy clusters:
if the index name in Hibernate Search is `myIndex`,
this strategy will create an index named `myindex`, and will not use any alias.

See
link:{hibernate-search-docs-url}#backend-elasticsearch-indexlayout[this section of the reference documentation]
for more information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `IndexLayoutStrategy` implementation with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
See xref:#plugging-in-custom-components[this section]
for more information.

If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_LAYOUT_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_LAYOUT_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

h|[[quarkus-hibernate-search-orm-elasticsearch_section_quarkus-hibernate-search-orm-elasticsearch-indexes]] [.section-name.section-level1]##link:#quarkus-hibernate-search-orm-elasticsearch_section_quarkus-hibernate-search-orm-elasticsearch-indexes[Per-index configuration overrides]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-settings-file]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-settings-file[`quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.settings-file`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.settings-file+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.settings-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.settings-file+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.settings-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.settings-file+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.settings-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.settings-file+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Path to a file in the classpath holding custom index settings to be included in the index definition
when creating an Elasticsearch index.

The provided settings will be merged with those generated by Hibernate Search, including analyzer definitions.
When analysis is configured both through an analysis configurer and these custom settings, the behavior is undefined;
it should not be relied upon.

See link:{hibernate-search-docs-url}#backend-elasticsearch-configuration-index-settings[this section of the reference documentation]
for more information.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_SETTINGS_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_SETTINGS_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-mapping-file]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-mapping-file[`quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.mapping-file`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.mapping-file+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.mapping-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.mapping-file+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.mapping-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.mapping-file+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.mapping-file`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.mapping-file+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Path to a file in the classpath holding a custom index mapping to be included in the index definition
when creating an Elasticsearch index.

The file does not need to (and generally shouldn't) contain the full mapping:
Hibernate Search will automatically inject missing properties (index fields) in the given mapping.

See link:{hibernate-search-docs-url}#backend-elasticsearch-mapping-custom[this section of the reference documentation]
for more information.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_MAPPING_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_MAPPING_FILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-analysis-configurer]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-analysis-configurer[`quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".analysis.configurer`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".analysis.configurer+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".analysis.configurer`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".analysis.configurer+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".analysis.configurer`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".analysis.configurer+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".analysis.configurer`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".analysis.configurer+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
One or more xref:#bean-reference-note-anchor[bean references]
to the component(s) used to configure full text analysis (e.g. analyzers, normalizers).

The referenced beans must implement `ElasticsearchAnalysisConfigurer`.

See xref:#analysis-configurer[Setting up the analyzers] for more
information.

[NOTE]
====
Instead of setting this configuration property,
you can simply annotate your custom `ElasticsearchAnalysisConfigurer` implementations with `@SearchExtension`
and leave the configuration property unset: Hibernate Search will use the annotated implementation automatically.
See xref:#plugging-in-custom-components[this section]
for more information.

If this configuration property is set, it takes precedence over any `@SearchExtension` annotation.
====


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__ANALYSIS_CONFIGURER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__ANALYSIS_CONFIGURER+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status[`quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.required-status`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.required-status+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.required-status`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.required-status+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The minimal https://www.elastic.co/guide/en/elasticsearch/reference/7.17/cluster-health.html[Elasticsearch cluster
status] required on startup.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS+++`
endif::add-copy-button-to-env-var[]
--
a|`green`, `yellow`, `red`
|`yellow`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status-wait-timeout]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-schema-management-required-status-wait-timeout[`quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.required-status-wait-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".schema-management.required-status-wait-timeout+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".schema-management.required-status-wait-timeout+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.required-status-wait-timeout`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".schema-management.required-status-wait-timeout+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
How long we should wait for the status before failing the bootstrap.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__SCHEMA_MANAGEMENT_REQUIRED_STATUS_WAIT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm[icon:question-circle[title=More information about the Duration format]]
|`10S`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-count]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-count[`quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-count`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-count+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.queue-count`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.queue-count+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-count`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-count+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.queue-count`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.queue-count+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The number of indexing queues assigned to each index.

Higher values will lead to more connections being used in parallel,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_COUNT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`10`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-size]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-queue-size[`quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.queue-size+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.queue-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.queue-size+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.queue-size+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.queue-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.queue-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The size of indexing queues.

Lower values may lead to lower memory usage, especially if there are many queues,
but values that are too low will reduce the likeliness of reaching the max bulk size
and increase the likeliness of application threads blocking because the queue is full,
which may lead to lower indexing throughput.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`1000`

a| [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-max-bulk-size]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-elasticsearch-indexes-index-name-indexing-max-bulk-size[`quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.max-bulk-size`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch.indexes."index-name".indexing.max-bulk-size+++[]
endif::add-copy-button-to-config-props[]


`quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.max-bulk-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.elasticsearch."backend-name".indexes."index-name".indexing.max-bulk-size+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.max-bulk-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch.indexes."index-name".indexing.max-bulk-size+++[]
endif::add-copy-button-to-config-props[]

`quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.max-bulk-size`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm."persistence-unit-name".elasticsearch."backend-name".indexes."index-name".indexing.max-bulk-size+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The maximum size of bulk requests created when processing indexing queues.

Higher values will lead to more documents being sent in each HTTP request sent to Elasticsearch,
which may lead to higher indexing throughput,
but incurs a risk of overloading Elasticsearch,
i.e. of overflowing its HTTP request buffers and tripping
https://www.elastic.co/guide/en/elasticsearch/reference/7.9/circuit-breaker.html[circuit breakers],
leading to Elasticsearch giving up on some request and resulting in indexing failures.

Note that raising this number above the queue size has no effect,
as bulks cannot include more requests than are contained in the queue.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_ELASTICSEARCH_INDEXES__INDEX_NAME__INDEXING_MAX_BULK_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|`100`



h|[[quarkus-hibernate-search-orm-elasticsearch_section_quarkus-hibernate-search-orm-management]] [.section-name.section-level0]##link:#quarkus-hibernate-search-orm-elasticsearch_section_quarkus-hibernate-search-orm-management[Management interface]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-management-root-path]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-management-root-path[`quarkus.hibernate-search-orm.management.root-path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.management.root-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Root path for reindexing endpoints.
This value will be resolved as a path relative to `${quarkus.management.root-path}`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_MANAGEMENT_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_MANAGEMENT_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`hibernate-search/`

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-management-enabled]] [.property-path]##link:#quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm-management-enabled[`quarkus.hibernate-search-orm.management.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.hibernate-search-orm.management.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If management interface is turned on the reindexing endpoints will be published under the management interface.
This property allows to enable this functionality by setting it to ``true`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_SEARCH_ORM_MANAGEMENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_SEARCH_ORM_MANAGEMENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`


|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-hibernate-search-orm-elasticsearch_quarkus-hibernate-search-orm]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
